hamburger menu & code

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <nav class="header-nav">
             <h1><a class="nav__link" href="#">THE DESIGN SHOP</a></h1>
             <div class="menu">
-                <input type="checkbox" id="menu-toggle">
                 <label for="menu-toggle" class="hamburger">&#9776;</label>
-
+                <input type="checkbox" id="menu-toggle">
+ 
                 <ul class="header-menu">
                     <li class="header__item"> <a href="" class="nav__link">Weekly Recommendations</a></li>
                     <li class="header__item"> <a href="" class="nav__link">Contact</a></li> 
@@ -161,11 +161,11 @@
             </figure>
 
             <figure class="small">
-                <a href="https://amzn.to/2G84CiT" target="_blank">
+                <a href="https://www.amazon.com/Corkcicle-Collection-Water-Thermos-Triple-Insulated-Shatterproof/dp/B01GG0CDZW/ref=sr_1_5?dchild=1&keywords=dipped+canteen+corkcicle&qid=1603026869&sr=8-5" target="_blank">
                     <img src="assets/img/s2_4_h8.png" alt="black bottle">
                 </a>
                 <figcaption>
-                    <a class="fig__link" href="https://amzn.to/2G84CiT" target="_blank">Dipped Canteen
+                    <a class="fig__link" href="https://www.amazon.com/Corkcicle-Collection-Water-Thermos-Triple-Insulated-Shatterproof/dp/B01GG0CDZW/ref=sr_1_5?dchild=1&keywords=dipped+canteen+corkcicle&qid=1603026869&sr=8-5" target="_blank">Dipped Canteen
                         <span class="company">Corkcicle.</span>
                     </a>
                     <p class="price">$28.00</p>
@@ -323,7 +323,7 @@
 
             <figure class="small">
                 <a href="https://amzn.to/2I5vxiq" target="_blank">
-                    <img src="assets/img/s3_3_d4.png" alt="car wallet">
+                    <img src="assets/img/s4_3_u12.png" alt="car wallet">
                 </a>
                 <figcaption>
                     <a class="fig__link" href="https://amzn.to/2I5vxiq" target="_blank">Card Wallet
@@ -335,7 +335,7 @@
 
             <figure class="small">
                 <a href="https://goodfuckingdesignadvice.com/products/classic-advice-print" target="_blank">
-                    <img src="assets/img/s3_4_u11.png" alt="book">
+                    <img src="assets/img/s4_4_p3.png" alt="book">
                 </a>
                 <figcaption>
                     <a class="fig__link" href="https://goodfuckingdesignadvice.com/products/classic-advice-print"
@@ -348,7 +348,7 @@
             <!--sec#4 line#3-->
             <figure class="small">
                 <a href="https://amzn.to/2D3yZWX" target="_blank">
-                    <img src="assets/img/s3_5_h9.png" alt="black mouse">
+                    <img src="assets/img/s4_5_life-15.png" alt="black mouse">
                 </a>
                 <figcaption>
                     <a class="fig__link" href="https://amzn.to/2D3yZWX" target="_blank">Magic Mouse 2
@@ -360,7 +360,7 @@
 
             <figure class="small">
                 <a href="https://amzn.to/2WTbsPL" target="_blank">
-                    <img src="assets/img/s3_6_p2.png" alt="Insulated bottle black">
+                    <img src="assets/img/s4_6_life-17.png" alt="Insulated bottle black">
                 </a>
                 <figcaption>
                     <a class="fig__link" href="https://amzn.to/2WTbsPL" target="_blank">Travel Tumbler
@@ -373,7 +373,7 @@
 
             <figure class="small">
                 <a href="https://amzn.to/2GbCf4A" target="_blank">
-                    <img src="assets/img/s3_7_h4.png" alt="computer keyboard">
+                    <img src="assets/img/s4_7_life-16.png" alt="computer keyboard">
                 </a>
                 <figcaption>
                     <a class="fig__link" href="https://amzn.to/2GbCf4A" target="_blank">Magic Keyboard
