--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <input type="checkbox" id="menu-toggle">
  
                 <ul class="header-menu">
-                    <li class="header__item"> <a href="" class="nav__link">Weekly Recommendations</a></li>
-                    <li class="header__item"> <a href="" class="nav__link">Contact</a></li> 
-                    <li class="header__item"><a href="" class="nav__link">TDB</a></li>  
+                    <li class="header__item"><a href="#" class="nav__link">Weekly Recommendations</a></li>
+                    <li class="header__item"><a href="#contact" class="nav__link">Contact</a></li> 
+                    <li class="header__item"><a href="#" class="nav__link">TDB</a></li>  
                 </ul>
             </div>
         </nav>
@@ -440,11 +440,10 @@
     <nav class="bottom-nav">
         <div>
             <h2>The Design Shop</h2>
-            <p class="nav__p">Carefully curated online design store,<br> founded and designed by <a href="#"
-                    class="nav__link-inline">Ruby Bacanovic</a></p>
+            <p class="nav__p">Carefully curated online design store,<br> founded and designed by <a href="https://onno.studio/" class="nav__link-inline" target="_blank">Ruby Bacanovic</a></p>
         </div>
         <div>
-            <h2>Contact</h2>
+            <h2 id="contact">Contact</h2>
             <a href="mailto:" class="nav__link">Email us</a>
             <a href="#" class="nav__link">Work with us</a>
         </div>
